# potential-potato

./: .gitignore  Dockerfile  Makefile  README.md  content.py  main.py  setup.py
.circleci/: config.yml
.github/workflows/: Cpp.yml
cppOpenMicNight/: .gitignore  .gitingore  CMakeLists.txt  README.md  install_gtest.sh  savePushConfig.sh
cppOpenMicNight/include/: Album.h  Artist.h  Song.h  album.h  song.h
cppOpenMicNight/src/: Album.cpp  Artist.cpp  Song.cpp  album.cpp
cppOpenMicNight/test/: AllTests.cpp  test_album.cpp  test_artist.cpp  test_song.cpp
openMicNight/: .git-ignore  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  temp.ini
openMicNight/artifacts/test_results/: junit.xml
openMicNight/openMicNight/: artist.py  content.py  startHere.py
openMicNight/openmicnight/: artist.py  band.py  user.py
openMicNight/test/: test_artist.py  test_user.py
openMicNight/tests/: test_artist.py  test_band.py  test_openmicnight.py  test_user.py
pyApp/: Makefile  requirements.txt  setup.py
pyApp/openMicNight/: main.py  user.py
src/: artist.py  content.py
test/: test_Artist.py
