[tool.poetry]
name = "openMicNight"
version = "0.1.0"
description = ""
authors = ["Kyle <kgbostian@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pylama = "^7.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
